--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,16 @@
-recursive-include src/crayon/c_ext *.h *.c
+include LICENSE
+include README.md
+include pyproject.toml
+include setup.py
+
+# Include C source headers
+include src/crayon/c_ext/*.h
+include src/crayon/c_ext/*.c
+
+# Include standard init files
+global-include __init__.py
+
+# Exclude test artifacts
+prune tests
+prune benchmarks
+exclude .gitignore
