--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,34 @@
 [build-system]
-requires = ["setuptools>=61.0", "wheel"]
+requires = ["setuptools>=68.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "xerv-crayon"
-version = "0.1.0"
-description = "High-performance tokenizer"
+version = "1.0.0"
+description = "Production-grade tokenizer achieving >2M tokens/s via AVX2 optimizations."
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.12"
 license = {file = "LICENSE"}
-classifiers = [
-    "Programming Language :: Python :: 3",
+authors = [
+  {name = "Soham Pal", email = "botmaker583@gmail.com"},
+  {name = "Xerv Research Engineering Division"}
 ]
-dependencies = []
+keywords = ["tokenizer", "nlp", "simd", "avx2", "high-performance", "zero-copy"]
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Intended Audience :: Science/Research",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: C",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Text Processing :: Linguistic",
+    "Operating System :: POSIX :: Linux",
+    "Operating System :: Microsoft :: Windows",
+    "Operating System :: MacOS"
+]
 
-[project.optional-dependencies]
-dev = ["pytest", "black", "mypy"]
-
-[tool.setuptools.packages.find]
-where = ["src"]
+[project.urls]
+Homepage = "https://xerv.netlify.app/"
+Repository = "https://github.com/xerv/crayon"
